이벤트 완료

--- a/src/main/resources/templates/book/best_books1.html
+++ b/src/main/resources/templates/book/best_books1.html
@@ -130,8 +130,8 @@
                 <div style="margin-bottom: 20px;"></div> <!-- 강제로 줄 바꿈+한 칸 공백 -->
                 <div>할인가 8000원</div>
                 <div style="margin-bottom: 20px;"></div> <!-- 강제로 줄 바꿈+한 칸 공백 -->
-                <div>수령 예상일</div>
-                <div>지금 주문하면 내일 도착</div>
+<!--                <div>수령 예상일</div>-->
+<!--                <div>지금 주문하면 내일 도착</div>-->
             </div>
             <div style="margin-bottom: 20px;"></div> <!-- 강제로 줄 바꿈+한 칸 공백 -->
             <div class="rate" onclick="setStarRating(event)">
