--- a/src/main/resources/templates/event/event_form.html
+++ b/src/main/resources/templates/event/event_form.html
@@ -1,5 +1,28 @@
 <html layout:decorate="~{layout}">
 <div layout:fragment="content">
-    이벤트 입력 폼
+    <div class="event-section">
+        <nav th:replace="~{/event/event_layout :: eventSide}"></nav>
+        <div class="container p-3">
+            <a class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
+                <span class="fs-5 fw-semibold">이벤트</span>
+            </a>
+            <div class="container p-3">
+                <a class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
+                    <span class="fs-5 fw-semibold">이벤트 등록</span>
+                </a>
+                <form th:action="@{/event/create}" method="post">
+                    <div class="mb-3">
+                        <label for="title" class="form-label">제목</label>
+                        <input type="text" name="title" id="title" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <label for="content" class="form-label">내용</label>
+                        <textarea name="content" id="content" class="form-control" rows="10"></textarea>
+                    </div>
+                    <input type="submit" value="저장하기" class="btn btn-primary my-2">
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
 </html>
