--- a/src/main/resources/templates/event/event_layout.html
+++ b/src/main/resources/templates/event/event_layout.html
@@ -1,8 +1,8 @@
-<div class="left-side" th:fragment="faqSide">
+<div class="left-side" th:fragment="eventSide">
     <div class="flex-shrink-0 p-3" style="width: 280px;">
-        <a href="/"
+        <a th:href="@{/event/list}"
            class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
-            <span class="fs-5 fw-semibold">고객센터</span>
+            <span class="fs-5 fw-semibold">이벤트</span>
         </a>
         <ul class="list-unstyled ps-0">
             <li class="mb-1">
