--- a/src/main/resources/templates/event/event_detail.html
+++ b/src/main/resources/templates/event/event_detail.html
@@ -1,5 +1,29 @@
 <html layout:decorate="~{layout}">
 <div layout:fragment="content">
-    디테일 페이지
+    <div class="event-section">
+        <div class="left-side">
+            <nav th:replace="~{/event/event_layout :: eventSide}"></nav>
+        </div>
+        <div class="container p-3">
+            <a class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
+                <span class="fs-5 fw-semibold" th:text="${event.title}"></span>
+            </a>
+            <div class="card my-3">
+                <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
+                     xmlns="http://www.w3.org/2000/svg" role="img"
+                     aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
+                     focusable="false"><title>이벤트</title>
+                    <rect width="100%" height="100%" fill="#55595c"/>
+                    <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
+                </svg>
+            </div>
+            <div class="card my-3">
+                <div class="card-body">
+                    <div class="card-text" style="white-space: pre-line;" th:text="${event.content}"></div>
+                </div>
+            </div>
+            <a th:href="@{/event/list}" class="btn btn-sm btn-primary">돌아가기</a>
+        </div>
+    </div>
 </div>
 </html>
