--- a/src/main/resources/templates/event/event_modifyForm.html
+++ b/src/main/resources/templates/event/event_modifyForm.html
@@ -1,19 +1,21 @@
 <html layout:decorate="~{layout}">
 <div layout:fragment="content">
-    <div class="faq-section">
-        <nav th:replace="~{/faq/faq_layout :: faqSide}"></nav>
+    <div class="event-section">
+        <div class="left-side">
+            <nav th:replace="~{/event/event_layout :: eventSide}"></nav>
+        </div>
         <div class="container p-3">
             <a class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
-                <span class="fs-5 fw-semibold">FAQ 등록</span>
+                <span class="fs-5 fw-semibold">EVENT 수정</span>
             </a>
-            <form th:action="@{/faq/create}" method="post">
+            <form th:action="@{/event/modify/{id}(id=${event.id})}" method="post">
                 <div class="mb-3">
                     <label for="title" class="form-label">제목</label>
-                    <input type="text" name="title" id="title" class="form-control">
+                    <input type="text" th:field="${event.title}" name="title" id="title" class="form-control">
                 </div>
                 <div class="mb-3">
                     <label for="content" class="form-label">내용</label>
-                    <textarea name="content" id="content" class="form-control" rows="10"></textarea>
+                    <textarea  th:field="${event.content}" name="content" id="content" class="form-control" rows="10"></textarea>
                 </div>
                 <input type="submit" value="저장하기" class="btn btn-primary my-2">
             </form>
