--- a/src/main/resources/templates/faq/faq_modifyForm.html
+++ b/src/main/resources/templates/faq/faq_modifyForm.html
@@ -2,88 +2,7 @@
 <div layout:fragment="content">
     <div class="faq-section">
         <div class="left-side">
-            <div class="flex-shrink-0 p-3" style="width: 280px;">
-                <a href="/"
-                   class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
-                    <span class="fs-5 fw-semibold">고객센터</span>
-                </a>
-                <ul class="list-unstyled ps-0">
-                    <li class="mb-1">
-                        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
-                                data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="true">
-                            상품
-                        </button>
-                        <div class="collapse show" id="home-collapse">
-                            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">국내
-                                    eBook</a>
-                                </li>
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">국외
-                                    eBook</a>
-                                </li>
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">대여
-                                    eBook</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="mb-1">
-                        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
-                                data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false">
-                            회원관련
-                        </button>
-                        <div class="collapse" id="dashboard-collapse">
-                            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">회원가입/탈퇴</a>
-                                </li>
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">ID/PW
-                                    찾기</a>
-                                </li>
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">회원정보변경</a>
-                                </li>
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">쿠폰
-                                    발급</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="mb-1">
-                        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
-                                data-bs-toggle="collapse" data-bs-target="#orders-collapse" aria-expanded="false">
-                            결제관련
-                        </button>
-                        <div class="collapse" id="orders-collapse">
-                            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">취소/환불</a>
-                                </li>
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">결제내역</a>
-                                </li>
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">정산방법</a>
-                                </li>
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">결제변경</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li class="border-top my-3"></li>
-                    <li class="mb-1">
-                        <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
-                                data-bs-toggle="collapse" data-bs-target="#account-collapse" aria-expanded="false">
-                            1:1 문의
-                        </button>
-                        <div class="collapse" id="account-collapse">
-                            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">1:1
-                                    문의하기</a>
-                                </li>
-                                <li><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded">1:1
-                                    문의내역</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </div>
+            <nav th:replace="~{/faq/faq_layout :: faqSide}"></nav>
         </div>
         <div class="container p-3">
             <a class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
