--- a/src/main/resources/templates/mainhome.html
+++ b/src/main/resources/templates/mainhome.html
@@ -890,7 +890,7 @@
                                     data-support-multiple-densities="true"
                             ></div>
                             <!--결제 테스트를 위한 임시 버튼(추후 이동예정)-->
-                            <button onclick="window.open('http://localhost:8010/member/login', '로그인창', 'width=430, height=500, location=no, status=no, scrollbars=yes, top=150,left=400');">팝업 테스트 버튼</button>
+                            <button onclick="window.open('http://localhost:8010/orders/pay', '로그인창', 'width=500, height=500, location=no, status=no, scrollbars=yes, top=150,left=600');">팝업 테스트 버튼</button>
                         </div>
                     </div>
                 </div>
