--- a/src/main/resources/templates/book/book_detail.html
+++ b/src/main/resources/templates/book/book_detail.html
@@ -1,2 +1,13 @@
-<h1>책제목</h1>
+<h5 class="my-3 border-bottom pb-2">도서 상세정보</h5>
+<div th:each="book : ${books}">
+    <h6>제목: <span th:text="${book.subject}"></span></h6>
+    <p>내용: <span th:text="${book.content}"></span></p>
+    <p>가격: <span th:text="${book.price}"></span></p>
+    <p>출판사: <span th:text="${book.publisher}"></span></p>
+    <p>할인율: <span th:text="${book.discount}"></span></p>
+    <p>책 소개: <span th:text="${book.bookIntroduce}"></span></p>
+    <!-- 이미지 표시 -->
+    <img th:src="@{'/uploads/book-thumbnails/' + ${book.id} + '/' + ${book.bookThumbnailImg}}" alt="도서 이미지">
+</div>
+
 
