--- a/src/main/resources/templates/book/book_list.html
+++ b/src/main/resources/templates/book/book_list.html
@@ -3,7 +3,7 @@
     <tr>
         <th>번호</th>
         <th>제목</th>
-        <th>작성일시</th>
+        <th>이미지</th>
     </tr>
     </thead>
     <tbody>
@@ -12,7 +12,10 @@
         <td>
             <a th:href="@{|/book/detail/${book.id}|}" th:text="${book.subject}"></a>
         </td>
-        <td th:text="${#temporals.format(book.createDate, 'yyyy-MM-dd HH:mm')}"></td>
+        <td>
+            <img th:src="@{'/uploads/book-thumbnails/' + ${book.id} + '/' + ${book.bookThumbnailImg}}"
+                 alt="도서 이미지" width="100" height="100">
+        </td>
     </tr>
     </tbody>
 </table>
